# rust-gpu-life

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
interface/: Cargo.toml
interface/src/: lib.rs
shaders/: Cargo.toml
shaders/src/: lib.rs
src/: lib.rs  main.rs
