[package]
name = "rust-gpu-life"
version = "0.1.0"
authors = ["Daniel McNab <36049421+DJMcNab@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "6019f391ec8d8caec3c7a16235322aca036e2d03" }

[workspace]
members = ["shaders"]
